<resources>

    <string name="app_name">AndroidChat</string>
    <string name="tv_ip">服务器IP</string>
    <string name="username">昵称</string>
    <string name="start">进入</string>
    <string name="end">退出</string>
    <string name="send">发送</string>
    <string name="edt_ip">10.64.130.101</string>
    <string name="edt_name">Android</string>
    <string name="conent">发送的内容</string>
    <string name="list">消息列表</string>

</resources>